--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ dist: bionic
 env:
   matrix:
     - NAME=bc-raspbian-buster-lite
-      URL=https://downloads.raspberrypi.org/raspbian_lite/images/raspbian_lite-2019-09-30/2019-09-26-raspbian-buster-lite.zip
-      SHA256=a50237c2f718bd8d806b96df5b9d2174ce8b789eda1f03434ed2213bbca6c6ff
+      URL=http://downloads.raspberrypi.org/raspbian_lite/images/raspbian_lite-2020-02-14/2020-02-13-raspbian-buster-lite.zip
+      SHA256=12ae6e17bf95b6ba83beca61e7394e7411b45eba7e6a520f434b0748ea7370e8
 
     - NAME=bc-raspbian-buster
-      URL=https://downloads.raspberrypi.org/raspbian/images/raspbian-2019-09-30/2019-09-26-raspbian-buster.zip
-      SHA256=2c4067d59acf891b7aa1683cb1918da78d76d2552c02749148d175fa7f766842
+      URL=http://downloads.raspberrypi.org/raspbian/images/raspbian-2020-02-14/2020-02-13-raspbian-buster.zip
+      SHA256=a82ed4139dfad31c3167e60e943bcbe28c404d1858f4713efe5530c08a419f50
 
 addons:
   apt:
