--- a/files/wpa_supplicant.example.conf
+++ b/files/wpa_supplicant.example.conf
@@ -5,7 +5,9 @@ update_config=1
 
 # country=«your_ISO-3166-1_two-letter_country_code»  example: cs or us
 
-# network={
-#     ssid="wifi_SSIS"
-#     psk="wifi_password"
-# }
+country=cs
+
+network={
+    ssid="wifi_SSIS"
+    psk="wifi_password"
+}
